New dialog to select asset type before creation